[package]
name = "set-game-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sgs"
path = "src/bin/sgs.rs"
required-features = ["demo"]

[lib]
name = "set_game_solver"
path = "src/lib.rs"

[dependencies]
argh = { version = "0.1.7", optional = true }
crossterm = { version = "0.23.0", optional = true }
num-derive = "0.3"
num-traits = "0.2"
once_cell = "1.9.0"
rand = { version = "0.8.5", optional = true }
rand_pcg = { version = "0.3.1", optional = true }
tui = { version = "0.17.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.1.0"
itertools = "0.10.3"

[features]
default = ["demo", "random"]

# Enable the command line interactive game solver
demo = ["tui", "random", "argh", "crossterm"]
random = ["rand", "rand_pcg"]
